force-app/main/default/objects/NI_TFSWorkItem__c/NI_TFSWorkItem__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-016047
This is a generic WorkItem from TFS.  It contains the Type, ID, URL, State, Reason and Release fields.  This is necessary for Support to have visibility into how a Change Request is being implemented and in what releases.</description>
    <label>TFSWorkItem</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>TFSWorkItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TFSWorkItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>