force-app/main/default/objects/NI_TFSWorkItem__c/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the link to the change request.  This a child of the Change Request</description>
    <label>Change Request</label>
    <referenceTo>SFDC_CSP_Development_Request__c</referenceTo>
    <relationshipLabel>TFSWorkItems</relationshipLabel>
    <relationshipName>TFSWorkItems</relationshipName>
    <type>Lookup</type>
</CustomField>