force-app/main/default/objects/NI_TFSWorkItem__c/fields/Product_Release__c.field-meta.xml
<CustomField>
    <fullName>Product_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-016465</description>
    <label>Product Release</label>
    <referenceTo>NI_Product_Release__c</referenceTo>
    <relationshipLabel>TFS Work Items</relationshipLabel>
    <relationshipName>TFSWorkItems</relationshipName>
    <type>Lookup</type>
</CustomField>