force-app/main/default/objects/NI_TFSWorkItem__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <description>The Product Release assigned to this WortkItem</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Release</label>
    <length>155</length>
    <type>Text</type>
</CustomField>