force-app/main/default/objects/NI_TFSWorkItem__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>The state of the Workitem in TFS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>State</label>
    <length>155</length>
    <type>Text</type>
</CustomField>