force-app/main/default/objects/NI_TFSWorkItem__c/fields/TFS_ID__c.field-meta.xml
<CustomField>
    <fullName>TFS_ID__c</fullName>
    <description>The ID of the workitem in TFS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TFS_ID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>